--- a/templates/equipment-form.html
+++ b/templates/equipment-form.html
@@ -13,11 +13,14 @@
         <form method='post' class='bootstrap4'>
           {% csrf_token %}
           <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
 				{{ form.category | as_crispy_field }}
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
 				{{ form.ownership | as_crispy_field }}
+            </div>
+            <div class="form-group col-md-4">
+				{{ form.owner | as_crispy_field }}
             </div>
           </div>
           <div class="form-row">
