workin avatar upload for customers

--- a/templates/customer-details.html
+++ b/templates/customer-details.html
@@ -17,7 +17,11 @@
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex flex-column align-items-center text-center">
+                    {% if user.avatar %}
+                        <img src="{{ user.avatar.url }}" alt="Admin" class="rounded-circle" width="150">
+                    {% else %}
                     <img src="{% static 'img/undraw_profile.svg' %}" alt="Admin" class="rounded-circle" width="150">
+                    {% endif %}
                     <div class="mt-3">
                       <h4 class="font-weight-bold text-gray-800">{{ user }}</h4>
 
