--- a/templates/customer-form.html
+++ b/templates/customer-form.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="card-body">
-        <form method='post' class='bootstrap4'>
+        <form method='post' class='bootstrap4' enctype='multipart/form-data'>
           {% csrf_token %}
           <div class="form-row">
             <div class="form-group col-md-6">
@@ -66,6 +66,9 @@
             <div class="form-group col-md-4">
 				{{ form.contact_name_2 | as_crispy_field }}
             </div>
+          </div>
+          <div class="form-group">
+		  	{{ form.avatar | as_crispy_field }}
           </div>
 
           <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
