everything working before renaming the app and the project

--- a/templates/driver-form.html
+++ b/templates/driver-form.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 <div class='row'>
-<div class='col-xl-6 mx-auto'>
+<div class='col-sm-12 col-xl-6 mx-auto'>
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Driver information form</h6>
@@ -13,79 +13,76 @@
         <form method='post' class='bootstrap4' enctype='multipart/form-data'>
           {% csrf_token %}
           <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="col-md-6">
 				{{ form.first_name | as_crispy_field }}
             </div>
-            <div class="form-group col-md-6">
+            <div class="col-md-6">
 				{{ form.last_name | as_crispy_field }}
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.birth_date | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.gender | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.email | as_crispy_field }}
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.phone | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.mobile | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.fax | as_crispy_field }}
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.mc | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.usdot | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 		  	    {{ form.g_rate | as_crispy_field }}
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.address | as_crispy_field }}
             </div>
-            <div class="form-group col-md-3">
+            <div class="col-md-3">
 				{{ form.city | as_crispy_field }}
             </div>
             <div class="form-group col-md-3">
 				{{ form.state | as_crispy_field }}
             </div>
-            <div class="form-group col-md-2">
+            <div class="col-md-2">
 				{{ form.zip_code | as_crispy_field }}
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.telegram | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.emergency_contact_name | as_crispy_field }}
             </div>
-            <div class="form-group col-md-4">
+            <div class="col-md-4">
 				{{ form.emergency_contact_phone | as_crispy_field }}
             </div>
           </div>
+	            {{ form.avatar | as_crispy_field }}
           <div class="form-row justify-content-end">
-            <div class="form-group">
 	            {{ form.active | as_crispy_field }}
-            </div>
           </div>
-          <div class="form-group">
-	          {{ form.avatar | as_crispy_field }}
-          </div>
+                
 
           <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
         </form>
