--- a/templates/customer-details.html
+++ b/templates/customer-details.html
@@ -1,5 +1,6 @@
 {% extends 'templates/dash.html' %}
 {% load static %}
+{% load humanize %}
 {% block content %}
 
 <div class="container-fluid">
@@ -121,7 +122,7 @@
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                 Earnings (Monthly)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">${{earnings | intcomma }}</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
