--- a/templates/driver-details.html
+++ b/templates/driver-details.html
@@ -1,5 +1,6 @@
 {% extends 'templates/dash.html' %}
 {% load static %}
+{% load humanize %}
 {% block content %}
 
 <div class="container-fluid">
@@ -25,7 +26,7 @@
                     <div class="mt-3">
                       <h4 class="font-weight-bold text-gray-800">{{ user }}</h4>
 
-                      <p class="text-secondary mb-1">Full Stack Developer</p>
+                      <p class="text-secondary mb-1">Driver tagline</p>
                       <p class="text-muted font-size-sm">{{ user.short_address }}</p>
                       <button class="btn btn-primary">Follow</button>
                       <button class="btn btn-outline-primary">Message</button>
@@ -109,8 +110,8 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Earnings (Monthly)</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                Earnings (Weekly)</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">${{ earnings | intcomma }}</div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
