--- a/templates/driver-details.html
+++ b/templates/driver-details.html
@@ -191,7 +191,7 @@
 <div class="row">
   <!-- Equipment -->
   <!-- Documents -->
-  <div class="col-xl-6">
+  <div class="col-xl-4">
    <div class="card shadow mb-4">
         <!-- Card Header - Accordion -->
           <div
@@ -213,7 +213,7 @@
                         <tbody>
                             {% for document in documents %}
                             <tr>
-                                <td>{{ document.name }}</td>
+                                <td>{{ document.get_name_display }}</td>
                                 <td>{{ document.expiry_date }}</td>
                                 <td>{{ document.number }}</td>
                                 <td>
