--- a/templates/customers.html
+++ b/templates/customers.html
@@ -4,30 +4,30 @@
 
 {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags}} alert-dismissable fade show" role="alert">
+        <div class="alert alert-{{ message.tags}} alert-dismissible fade show" role="alert">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
 {% endif %}
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Customers</h1>
+    <h1 class="h1 mt-4 mb-0">Customers</h1>
     <a href="{% url 'dash-new-customer' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
             class="fas fa-plus fa-sm text-white-50"></i> New customer</a>
 </div>
 
-<!-- DataTales Example -->
+<!-- Customers Table -->
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+         <i class="fas fa-table me-1"></i>
+         Customers
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered table-hover" id="datatablesSimple" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>Company Name</th>
@@ -59,12 +59,7 @@
 
 {% load static %}
 {% block styles %}
-<link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block scripts %}
-<!-- Data tables plugins and scripts -->
-<script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'js/demo/datatables-demo.js' %}"></script>
 {% endblock %}
