--- a/templates/delete.html
+++ b/templates/delete.html
@@ -3,9 +3,7 @@
 {% load crispy_forms_tags %}
 
 <div class="d-flex justify-content-center">
-  <!-- Dropdown Card Example -->
-  <div class="card shadow mb-4">
-      <!-- Card Header - Dropdown -->
+  <div class="card shadow my-4">
       <div
           class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
           <h6 class="m-0 font-weight-bold text-primary">Confirm deletion</h6>
@@ -14,20 +12,15 @@
       <div class="card-body">
           <div class='my-4'> Are you sure you want to delete {{ object_name}}? You will have to delete all associated orders first. </div>
 
-        <div class='row justify-content-center'>
-        <div>
-          <form method='post'>
-            {% csrf_token %}
-            <input class='btn btn-danger mt-2' type='submit' value="Yes, I am sure">
-          </form>
-        </div>
-        <div>
+        <div class='d-flex justify-content-between'>
+            <form method='post'>
+              {% csrf_token %}
+              <input class='btn btn-danger mt-2' type='submit' value="Yes, I am sure">
+            </form>
           <a href="#" onclick="history.back()" class='btn btn-secondary mt-2 ml-5'>No, take me back</a>
-        </div>
        </div>
       </div>
   </div>
-
 </div>
 
 
