--- a/templates/documents.html
+++ b/templates/documents.html
@@ -3,29 +3,29 @@
 
 {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags}} alert-dismissable fade show" role="alert">
+        <div class="alert alert-{{ message.tags}} alert-dismissible fade show" role="alert">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
 {% endif %}
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Documents</h1>
-    <a href="{% url 'dash-new-document' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-white-50"></i> New document</a>
+    <h1 class="h1 mt-4 mb-0">Documents</h1>
+    <a href="{% url 'dash-new-document' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+            class="fas fa-plus fa-sm text-white-50"></i> New document</a>
 </div>
 
-<!-- DataTales Example -->
+<!-- Documents Table -->
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Documents central storage</h6>
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered table-hover" id="datatablesSimple" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>Name</th>
