--- a/templates/driver-form.html
+++ b/templates/driver-form.html
@@ -1,95 +1,91 @@
-{% extends 'templates/dash.html' %}
-{% block content %}
+{% extends 'templates/new-form.html' %}
+{% block newform %}
 {% load crispy_forms_tags %}
 
-<div class='row'>
-<div class='col-sm-12 col-xl-6 mx-auto'>
-<div class="card shadow mb-4">
-    <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Driver information form</h6>
-    </div>
+<div class="card-header py-3">
+    Driver information form
+</div>
 
-    <div class="card-body">
-        <form method='post' class='bootstrap4' enctype='multipart/form-data'>
-          {% csrf_token %}
-          <div class="form-row">
-            <div class="col-md-6">
-				{{ form.first_name | as_crispy_field }}
-            </div>
-            <div class="col-md-6">
-				{{ form.last_name | as_crispy_field }}
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="col-md-4">
-				{{ form.birth_date | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.gender | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.email | as_crispy_field }}
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="col-md-4">
-				{{ form.phone | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.mobile | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.fax | as_crispy_field }}
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="col-md-4">
-				{{ form.mc | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.usdot | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-		  	    {{ form.g_rate | as_crispy_field }}
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="col-md-4">
-				{{ form.address | as_crispy_field }}
-            </div>
-            <div class="col-md-3">
-				{{ form.city | as_crispy_field }}
-            </div>
-            <div class="form-group col-md-3">
-				{{ form.state | as_crispy_field }}
-            </div>
-            <div class="col-md-2">
-				{{ form.zip_code | as_crispy_field }}
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="col-md-4">
-				{{ form.telegram | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.emergency_contact_name | as_crispy_field }}
-            </div>
-            <div class="col-md-4">
-				{{ form.emergency_contact_phone | as_crispy_field }}
-            </div>
-          </div>
-	            {{ form.avatar | as_crispy_field }}
-          <div class="form-row justify-content-end">
-	            {{ form.active | as_crispy_field }}
-          </div>
-                
+<div class="card-body">
+    <form method='post' class='bootstrap4' enctype='multipart/form-data'>
+      {% csrf_token %}
+      <div class="row">
+        <div class="col-md">
+			{{ form.first_name | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.last_name | as_crispy_field }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md">
+			{{ form.birth_date | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.gender | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.email | as_crispy_field }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md">
+			{{ form.phone | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.mobile | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.fax | as_crispy_field }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md">
+			{{ form.mc | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.usdot | as_crispy_field }}
+        </div>
+        <div class="col-md">
+	  	    {{ form.g_rate | as_crispy_field }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+			{{ form.address | as_crispy_field }}
+        </div>
+        <div class="col-md-3">
+			{{ form.city | as_crispy_field }}
+        </div>
+        <div class="col-md-3">
+			{{ form.state | as_crispy_field }}
+        </div>
+        <div class="col-md-2">
+			{{ form.zip_code | as_crispy_field }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md">
+			{{ form.telegram | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.emergency_contact_name | as_crispy_field }}
+        </div>
+        <div class="col-md">
+			{{ form.emergency_contact_phone | as_crispy_field }}
+        </div>
+      </div>
+      
+      {{ form.avatar | as_crispy_field }}
+      
+      <div class="d-flex justify-content-end">
+            {{ form.active | as_crispy_field }}
+      </div>
+            
 
-          <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
-        </form>
-    </div>
-</div> <!-- end card -->
-</div> <!-- end column -->
-</div> <!-- end row -->
+      <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
+    </form>
+</div>
 
 {% endblock %}
 
