--- a/templates/equipment.html
+++ b/templates/equipment.html
@@ -14,18 +14,19 @@
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Equipment</h1>
-    <a href="{% url 'dash-new-equipment' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-white-50"></i> New equipment</a>
+    <h1 class="h1 mt-4 mb-0">Equipment</h1>
+    <a href="{% url 'dash-new-equipment' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+            class="fas fa-plus fa-sm text-white-50"></i> New equipment</a>
 </div>
 
-<!-- DataTales Example -->
+<!-- Equipment Table -->
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Trucks and Trailers</h6>
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered table-hover" id="datatablesSimple" width="100%" cellspacing="0">
                     <thead>
                         <tr>
                             <th>Type</th>
@@ -70,12 +71,7 @@
 
 {% load static %}
 {% block styles %}
-<link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block scripts %}
-<!-- Data tables plugins and scripts -->
-<script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'js/demo/datatables-demo.js' %}"></script>
 {% endblock %}
