--- a/templates/orders-table.html
+++ b/templates/orders-table.html
@@ -1,10 +1,11 @@
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">Orders</h6>
+         <i class="fas fa-table me-1"></i>
+         Orders
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+            <table class="table table-bordered table-hover" id="datatablesPlain" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>Customer</th>
