--- a/templates/orders.html
+++ b/templates/orders.html
@@ -3,22 +3,23 @@
 
 {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags}} alert-dismissable fade show" role="alert">
+        <div class="alert alert-{{ message.tags}} alert-dismissible fade show" role="alert">
             {{ message }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
 {% endif %}
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Orders</h1>
-    <a href="{% url 'dash-new-order' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-plus fa-sm text-white-50"></i> New order</a>
+    <h1 class="h1 mt-4 mb-0">Orders</h1>
+    <a href="{% url 'dash-new-order' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+            class="fas fa-plus fa-sm text-white-50"></i> New order</a>
 </div>
 
-    {% include 'templates/orders-table.html' %}
+<!-- Orders Table -->
+{% include 'templates/orders-table.html' %}
 
 {% endblock %}
 
@@ -26,12 +27,7 @@
 {% load static %}
 
 {% block styles %}
-<link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 {% endblock %}
 
 {% block scripts %}
-<!-- Data tables plugins and scripts -->
-<script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
-<script src="{% static 'js/demo/datatables-demo.js' %}"></script>
 {% endblock %}
