most things are working

--- a/templates/customer-details.html
+++ b/templates/customer-details.html
@@ -7,7 +7,7 @@
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Details</h1>
+    <h1 class="h1 mt-4 mb-0">Customer: {{ user }}</h1>
         <a href="#" class="btn btn-primary btn-icon-split ml-3"><span class="icon text-white-50"><i class="fas fa-download"></i></span><span class="text">Generate Report</span></a>
     </div>
 
@@ -377,9 +377,9 @@
 </div>
 
 
-<div class="d-sm-flex align-items-center justify-content-end mb-4">
-    <a href="edit/" class="btn btn-info btn-icon-split ml-3"><span class="icon text-white-50"><i class="fas fa-pencil-alt"></i></span><span class="text">Update user</span></a>
-    <a href="delete/" class="btn btn-danger btn-icon-split ml-4"><span class="icon text-white-50"><i class="fas fa-trash"></i></span><span class="text">Delete user</span></a>
+<div class="d-flex justify-content-end mb-4">
+    <a href="edit/" class="btn btn-info btn-icon-split ms-3"><span class="icon text-white-50"><i class="fas fa-pencil-alt"></i></span><span class="text">Update user</span></a>
+    <a href="delete/" class="btn btn-danger btn-icon-split ms-4"><span class="icon text-white-50"><i class="fas fa-trash"></i></span><span class="text">Delete user</span></a>
 </div>
 
 {% endblock %}
