--- a/templates/dash.html
+++ b/templates/dash.html
@@ -19,8 +19,8 @@
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary">
-            <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="{% url 'dash-main' %}">&gamma;TMS</a>
+            <!-- Navbar Brand--> 
+            <a class="navbar-brand ps-3" href="{% url 'dash-main' %}"><i class="fas fa-truck-monster"></i> Gamma TMS</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
