--- a/templates/driver-details.html
+++ b/templates/driver-details.html
@@ -396,9 +396,9 @@
 </div>
 
 
-<div class="d-sm-flex align-items-center justify-content-end mb-4">
-    <a href="edit/" class="btn btn-info btn-icon-split ml-3"><span class="icon text-white-50"><i class="fas fa-pencil-alt"></i></span><span class="text">Update user</span></a>
-    <a href="delete/" class="btn btn-danger btn-icon-split ml-4"><span class="icon text-white-50"><i class="fas fa-trash"></i></span><span class="text">Delete user</span></a>
+<div class="d-flex justify-content-end mb-4">
+    <a href="edit/" class="btn btn-info btn-icon-split ms-3"><span class="icon text-white-50"><i class="fas fa-pencil-alt"></i></span><span class="text">Update user</span></a>
+    <a href="delete/" class="btn btn-danger btn-icon-split ms-4"><span class="icon text-white-50"><i class="fas fa-trash"></i></span><span class="text">Delete user</span></a>
 </div>
 
 {% endblock %}
