--- a/templates/equipment.html
+++ b/templates/equipment.html
@@ -15,7 +15,7 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h1 mt-4 mb-0">Equipment</h1>
-    <a href="{% url 'dash-new-equipment' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+    <a href="{% url 'dash-new-equipment' %}" class="btn btn-sm btn-primary shadow"><i
             class="fas fa-plus fa-sm text-white-50"></i> New equipment</a>
 </div>
 
