--- a/templates/customers.html
+++ b/templates/customers.html
@@ -15,8 +15,8 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h1 mt-4 mb-0">Customers</h1>
-    <a href="{% url 'dash-new-customer' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-            class="fas fa-plus fa-sm text-white-50"></i> New customer</a>
+    <a href="{% url 'dash-new-customer' %}" class="btn btn-sm btn-primary shadow"><i
+            class="fas fa-plus text-white-50"></i> New customer</a>
 </div>
 
 <!-- Customers Table -->
@@ -45,7 +45,7 @@
                         <td>{{ customer.full_address }}</td>
                         <td>61</td>
                         <td>
-                            <a class='btn btn-info btn-sm' href="{% url 'dash-read-customer' customer.pk %}">View</a>
+                            <a class='btn btn-primary btn-sm' href="{% url 'dash-read-customer' customer.pk %}">View</a>
                         </td>
                     </tr>
                     {% endfor %}
