--- a/templates/dash.html
+++ b/templates/dash.html
@@ -10,6 +10,7 @@
         
         {% load static %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static 'css/overrides.css' %}" rel="stylesheet" />
         <script src="{% static 'vendor/fontawesome/all.min.js' %}" crossorigin="anonymous"></script>
         <link href="{% static 'vendor/simpledatatables/all.min.css' %}" rel="stylesheet" />
         <!-- page-specific styles -->
@@ -18,11 +19,11 @@
 
     </head>
     <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-gamma">
             <!-- Navbar Brand--> 
             <a class="navbar-brand ps-3" href="{% url 'dash-main' %}"><i class="fas fa-xl fa-truck-monster"></i> Gamma TMS</a>
             <!-- Sidebar Toggle-->
-            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-xl fa-bars"></i></button>
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
                 <div class="input-group">
@@ -132,7 +133,7 @@
         </div>
 
         <!-- Bootstrap core JavaScript-->
-        <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}" crossorigin="anonymous"></script>
+        <script src="{% static 'vendor/bootstrap/bootstrap.bundle.min.js' %}" crossorigin="anonymous"></script>
         
         <!-- Core plugin JavaScript-->
         <script src="{% static 'js/scripts.js' %}"></script>
