--- a/templates/driver-details.html
+++ b/templates/driver-details.html
@@ -10,93 +10,6 @@
 </div>
 
 
-      <div class="row gutters-sm">
-        <div class="col-md-4 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="d-flex flex-column align-items-center text-center">
-                {% if user.avatar %}
-                    <img src="{{ user.avatar.url }}" alt="Admin" class="rounded-circle" width="150">
-                {% else %}
-                <img src="{% static 'img/undraw_profile.svg' %}" alt="Admin" class="rounded-circle" width="150">
-                {% endif %}
-                <div class="mt-3">
-                  <h4 class="font-weight-bold text-gray-800">{{ user }}</h4>
-
-                  <p class="text-secondary mb-1">Driver tagline</p>
-                  <p class="text-muted font-size-sm">{{ user.short_address }}</p>
-                  <button class="btn btn-primary">Follow</button>
-                  <button class="btn btn-outline-primary">Message</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="card mb-3">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0 font-weight-bold text-gray-800">Email</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  {{user.email}}
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0 font-weight-bold text-gray-800">Phone</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  {{user.phone}}
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0 font-weight-bold text-gray-800">Mobile</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  {{ user.mobile }}
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0 font-weight-bold text-gray-800">Address</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  {{ user.short_address }}
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0 font-weight-bold text-gray-800">Birthdate</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  {{ user.birth_date }}
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6 class="mb-0 font-weight-bold text-gray-800">MC / DOT#</h6>
-                </div>
-                <div class="col-sm-9 text-secondary">
-                  {{ user.mc }} / {{ user.usdot }}
-                </div>
-              </div>
-              <hr>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-
-
 <!-- Content Row -->
 <div class="row">
 
@@ -108,7 +21,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                             Earnings (Weekly)</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">${{ earnings | intcomma }}</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">${{ earnings_wk | intcomma }}</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -126,7 +39,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                             Earnings (Annual)</div>
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                        <div class="h5 mb-0 font-weight-bold text-gray-800">${{ earnings_yr | intcomma }}</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -142,7 +55,7 @@
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
+                        <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Completed orders
                         </div>
                         <div class="row no-gutters align-items-center">
                             <div class="col-auto">
@@ -151,7 +64,7 @@
                             <div class="col">
                                 <div class="progress progress-sm mr-2">
                                     <div class="progress-bar bg-info" role="progressbar"
-                                        style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                                        style="width: k0%" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
@@ -184,12 +97,101 @@
     </div>
 </div>
 
+<!-- Bio start -->
+<div class="row gutters-sm">
+  <div class="col-md-4 mb-3">
+    <div class="card shadow">
+      <div class="card-body">
+        <div class="d-flex flex-column align-items-center text-center">
+          {% if user.avatar %}
+              <img src="{{ user.avatar.url }}" alt="Admin" class="rounded-circle" width="150">
+          {% else %}
+          <img src="{% static 'img/undraw_profile.svg' %}" alt="Admin" class="rounded-circle" width="150">
+          {% endif %}
+          <div class="mt-3">
+            <h4 class="font-weight-bold text-gray-800">{{ user }}</h4>
+
+            <p class="text-secondary mb-1">Driver tagline</p>
+            <p class="text-muted font-size-sm">{{ user.short_address }}</p>
+            <button class="btn btn-primary">Follow</button>
+            <button class="btn btn-outline-primary">Message</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <div class="card mb-3 shadow">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 font-weight-bold text-gray-800">Email</h6>
+          </div>
+          <div class="col-sm-9 text-secondary">
+            {{user.email}}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 font-weight-bold text-gray-800">Phone</h6>
+          </div>
+          <div class="col-sm-9 text-secondary">
+            {{user.phone}}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 font-weight-bold text-gray-800">Mobile</h6>
+          </div>
+          <div class="col-sm-9 text-secondary">
+            {{ user.mobile }}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 font-weight-bold text-gray-800">Address</h6>
+          </div>
+          <div class="col-sm-9 text-secondary">
+            {{ user.short_address }}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 font-weight-bold text-gray-800">Birthdate</h6>
+          </div>
+          <div class="col-sm-9 text-secondary">
+            {{ user.birth_date }}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 font-weight-bold text-gray-800">MC / DOT#</h6>
+          </div>
+          <div class="col-sm-9 text-secondary">
+            {{ user.mc }} / {{ user.usdot }}
+          </div>
+        </div>
+        <hr>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+
+
 
 <div class="row">
   <!-- Equipment -->
   <!-- Documents -->
-  <div class="col-xl-4">
-   <div class="card shadow mb-4">
+  <div class="col-xl-6">
+   <div class="card shadow mb-4 shadow">
         <!-- Card Header - Accordion -->
           <div
               class="card-header py-3">
@@ -231,7 +233,6 @@
 {% include 'templates/orders-table.html' %}
 
 
-
 <!-- Content Row -->
 
 <div class="row">
@@ -240,30 +241,20 @@
     <div class="col-xl-8 col-lg-7">
         <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
-            <div
-                class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
-                <div class="dropdown no-arrow">
-                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                        aria-labelledby="dropdownMenuLink">
-                        <div class="dropdown-header">Dropdown Header:</div>
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </div>
+
+            <div class="card-header py-3">
+                 <i class="fas fa-chart-line me-1"></i>
+                 Earnings history
             </div>
             <!-- Card Body -->
             <div class="card-body">
                 <div class="chart-area">
-                    <canvas id="myAreaChart"></canvas>
+                    <canvas id="earningsHistory"></canvas>
                 </div>
             </div>
+
+            <!-- Card footer -->
+            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
         </div>
     </div>
 
